# rag-template

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SECURITY_REVIEW.md  alembic.ini  config.yaml  docker-compose.yml  pyproject.toml
.githooks/: commit-msg
alembic/: env.py
alembic/versions/: 2d7e44a4e099_add_status_check_constraint_to_pipeline_.py  43af7142011f_initial_schema.py
src/: auth.py  database.py  main.py  models.py
src/config/: loader.py  schema.py
tests/: conftest.py  test_auth.py  test_config.py  test_database.py  test_models.py
